prevent large whitespace between buttons

--- a/src/app/components/audio-button-list/audio-button-list.component.scss
+++ b/src/app/components/audio-button-list/audio-button-list.component.scss
@@ -1,5 +1,6 @@
 .audio-button-list {
   display: flex;
+  max-width: 320px;
   width: 100%;
   justify-content: space-between;
 }
